--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@
 body {
   background-color: var(--primary-color);
   padding: 1em; 
+  gap: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
 }
 
 h1 {
@@ -223,5 +228,13 @@ h1 {
 .welcome__text {
   text-align: center;
   padding-bottom: 1em;
+}
+
+iframe {
+  /* width: min(auto, 100%); */
+  /* height: 100%; */
+  /* border: none; */
+  align-self: center;
+  /* margin: auto; */
 }
   
